# investara

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  vercel.json
ai-memory/: CODE_RULES.md  FILE_MAP.md  PROJECT_OVERVIEW.md  SESSION_LEARNINGS.md
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: actions.py  ai.py  auth.py  health.py  investor_profiles.py  partners.py  projects.py  regions.py
apps/api/app/core/: config.py
apps/api/app/repositories/: data_store.py  mock_data.py  supabase.py
apps/api/app/schemas/: domain.py
apps/api/app/services/: action_service.py  ai_service.py  auth_service.py  recommendation_service.py
apps/api/tests/: test_action_schema.py  test_recommendations.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/map/: page.tsx
apps/web/src/app/profile/: page.tsx
apps/web/src/components/investara/: action-board.tsx  decision-section.tsx  discover-entry-panel.tsx  financial-risk-chart.tsx  investment-map-client.tsx  score-ring.tsx  (+7 more)
apps/web/src/data/: bkpm-opportunities.generated.json  mock-partners.ts  mock-projects.ts
apps/web/src/lib/: api.ts  bps-reference.ts  decision-brief.ts  i18n.ts  investor-profile.ts  recommendations.ts  use-local-storage-state.ts
apps/web/src/types/: investara.ts
infra/postgres/: 001_init.sql
infra/supabase/: 001_init.sql
scripts/: dev-web.mjs  sync-bkpm-opportunities.mjs
(+1 files in other folders)
